@@ -84,7 +84,7 @@ $c->{eprint_render} = sub
 			my $form = $session->render_form( "get", $session->get_repository->get_conf( "perl_url" ) . "/request_doc" );
 			$form->appendChild( $session->render_hidden_field( "eprintid", $eprint->get_id ) );
 			$form->appendChild( $session->render_action_buttons( 
-				"submit" => $session->phrase( "request:button" )
+				"null" => $session->phrase( "request:button" )
 			) );
 			$p->appendChild( $form );
 		}
@@ -122,7 +122,7 @@ $c->{eprint_render} = sub
 				my $form = $session->render_form( "get", $session->get_repository->get_conf( "perl_url" ) . "/request_doc" );
 				$form->appendChild( $session->render_hidden_field( "docid", $doc->get_id ) );
 				$form->appendChild( $session->render_action_buttons( 
-					"submit" => $session->phrase( "request:button" )
+					"null" => $session->phrase( "request:button" )
 				) );
 				$doctd->appendChild( $form );
 				$doctr->appendChild( $doctd );
